# Dropt

./: .gitignore  Cargo.toml  LICENSE  README.md  readme.md
.github/workflows/: ci.yml  release.yml
perf/: diff.sh
scripts/: install.sh
src/: crypto.rs  errors.rs  lib.rs  main.rs  output.rs  server.rs  tunnel.rs
src/common/: config.rs  manifest.rs  mod.rs  progress.rs  session_core.rs
src/common/config_commands/: edit.rs  io.rs  mod.rs  reset.rs  show.rs
src/crypto/: encryption.rs  types.rs
src/receive/: handlers.rs  mod.rs  session.rs  state.rs  storage.rs
src/send/: archive.rs  file_handle.rs  handlers.rs  mod.rs  state.rs
src/server/: api.rs  auth.rs  helpers.rs  mod.rs  modes.rs  progress.rs  routes.rs  runtime.rs  session.rs  state.rs  static_files.rs
src/transfer/: manifest.rs  receive_handlers.rs  security.rs  send_handlers.rs  storage.rs  util.rs
src/transport/: cloudflare.rs  local.rs  local_https.rs  mod.rs  tailscale.rs  tunnel.rs
src/ui/: tui.rs
src/ui/tui/: connection.rs  hyperlink.rs  mod.rs  render.rs  styles.rs  transfer_panel.rs  types.rs  ui.rs
src/utils/: mod.rs  security.rs
templates/: app.js  download.js  shared.js  styles.css  upload.js
templates/download/: download.js
tests/: auth_extractor_tests.rs  concurrency_stress_tests.rs  config_precedence_tests.rs  config_validation_tests.rs  crypto_tests.rs  error_injection_tests.rs  manifest_tests.rs  port_config_tests.rs  progress_contract_tests.rs  send_handler_tests.rs  session_tests.rs  storage_tests.rs  test_receive_handlers.rs  web_asset_handlers_tests.rs
tests/common/: config_test_utils.rs  mod.rs  receive_http.rs  send_http.rs
tests/utils/: mock_client.rs  mod.rs
(+7 files in other folders)
